# twitux

./: .gdbinit  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.in  rebuild-svn.sh  twitux.desktop  twitux.desktop.in
data/: Makefile.am  account_dialog.glade  account_dlg.xml  add_friend_dialog.glade  lists_dlg.xml  main.glade  main_window.glade  main_window.xml  preferences_dialog.glade  prefs_dlg.xml  send_message_dialog.glade  spell_dialog.glade  tray_menu.glade  tray_menu.xml  twitux.desktop.in.in  twitux.schemas.in
data/glade/: account_dialog.glade  lists_dialog.glade  preferences_dialog.glade
debian/: changelog  control  copyright  menu  rules  twitux.1  twitux.install  twitux.xpm  watch
help/: ChangeLog  Makefile.am
help/C/: twitux.xml
libtwitux/: Makefile.am  twitux-conf.c  twitux-conf.h  twitux-debug.c  twitux-debug.h  twitux-keyring.c  twitux-keyring.h  twitux-paths.c  twitux-paths.h  twitux-xml.c  twitux-xml.h
pixmaps/: Makefile.am  Makefile.in
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  de.po  es.po  fr.po  ja.po  ko.po  nb.po  pt.po  zh_CN.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  common.c  common.h  conf.c  conf.h  gcommon.c  gcommon.h  gui.c  gui.h  main.c  main.h  network.c  network.h  twitter.c  twitter.h  twitux-about.c  twitux-about.h  twitux-account-dialog.c  twitux-account-dialog.h  twitux-add-dialog.c  twitux-add-dialog.h  twitux-app.c  twitux-app.h  twitux-avatar.c  twitux-avatar.h  twitux-dbus.c  twitux-dbus.h  twitux-geometry.c  twitux-geometry.h  twitux-glade.c  twitux-glade.h  twitux-hint.c  twitux-hint.h  twitux-label.c  twitux-label.h  twitux-lists-dialog.c  twitux-lists-dialog.h  (+20 more)
