AC_INIT([Twitux], [0.50], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
AC_PREREQ(2.59)
AC_COPYRIGHT([Copyright (C) 2007 Daniel Morales])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

IT_PROG_INTLTOOL([0.35.0])

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="libsexy libssl gtk+-2.0  >= 2.10  gconf-2.0 libxml-2.0 glib-2.0 libsoup-2.2 libnotify"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl -----------------------------------------------------------
dnl Language Support
dnl -----------------------------------------------------------
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package name])

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
pixmaps/Makefile
])

echo
echo "Twitux prefix: $prefix"
echo
