AC_INIT([Twitux], [0.50], [http://sourceforge.net/tracker/?func=add&group_id=198704&atid=966542], [twitux])
AC_PREREQ(2.59)
AC_COPYRIGHT([Copyright (C) 2007 Daniel Morales])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AM_MAINTAINER_MODE

AM_PROG_LIBTOOL
AM_PATH_GLIB_2_0

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

IT_PROG_INTLTOOL([0.35.0])

GNOME_COMPILE_WARNINGS([maximum])
GNOME_CXX_WARNINGS
GNOME_DEBUG_CHECK
GNOME_MAINTAINER_MODE_DEFINES

dnl -----------------------------------------------------------
dnl
dnl Library Dependencies, uses pkg-config to detect correct version, etc
dnl
dnl -----------------------------------------------------------

LIBXML_REQUIRED=2.6.16
GLIB_REQUIRED=2.12.0
GTK_REQUIRED=2.10.0
GCONF_REQUIRED=1.2.0
LIBGNOME_REQUIRED=2.0.0
LIBGNOMEVFS_REQUIRED=2.0.0

dnl -----------------------------------------------------------
dnl Pkg-Config dependency checks
dnl -----------------------------------------------------------
PKG_CHECK_MODULES(LIBTWITUX,
[
	libxml-2.0 >= $LIBXML_REQUIRED
	glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0
	gconf-2.0 >= $GCONF_REQUIRED
])

AC_SUBST(LIBTWITUX_CFLAGS)
AC_SUBST(LIBTWITUX_LIBS)


PKG_CHECK_MODULES(TWITUX,
[
	libsexy
	libssl
	gtk+-2.0 >= $GTK_REQUIRED
	glib-2.0 >= $GLIB_REQUIRED
	gnome-vfs-2.0 >= $LIBGNOMEVFS_REQUIRED
	libsoup-2.2
	libnotify
])
AC_SUBST(TWITUX_CFLAGS)
AC_SUBST(TWITUX_LIBS)

dnl -----------------------------------------------------------
dnl Language Support
dnl -----------------------------------------------------------
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package name])

AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
data/Makefile
data/twitux.desktop.in
src/Makefile
libtwitux/Makefile
po/Makefile.in
])

echo
echo "Twitux prefix: $prefix"
echo
